# video2ascii

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
include/video2ascii/: ascii_player.hpp  sound.hpp
src/: CMakeLists.txt  ascii_player.cpp  main.cpp  sound.cpp
